<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_read">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.lab6.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_navigation_list_to_detailFragment2"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.example.lab6.ui.create.CreateFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/navigation_read"
        android:name="com.example.lab6.ui.read.ReadFragment"
        android:label="@string/title_read"
        tools:layout="@layout/fragment_read" />
    <fragment
        android:id="@+id/navigation_delete"
        android:name="com.example.lab6.ui.delete.DeleteFragment"
        android:label="@string/title_delete"
        tools:layout="@layout/fragment_delete" />
    <fragment
        android:id="@+id/navigation_update"
        android:name="com.example.lab6.ui.update.UpdateFragment"
        android:label="@string/title_update"
        tools:layout="@layout/fragment_update" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.lab6.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/detail_fragment" >
        <argument
            android:name="debtor"
            app:argType="com.example.lab6.data.entities.Debtor" />
    </fragment>
</navigation>